--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     </nav>
   </header>
 
-  <!-- Hero Section with Parallax Background -->
+  <!-- Hero Section with Parallax Background and Interactive Canvas -->
   <section id="hero" class="hero">
+    <!-- Dynamic Interactive Background -->
+    <canvas id="bgCanvas"></canvas>
+
     <div class="hero-content">
       <img src="assets/profile-placeholder.jpg" alt="Profile Image" class="profile-img" />
       <h1>Rohitashwa Chakraborty</h1>
@@ -43,7 +46,7 @@
     </div>
   </section>
 
-  <!-- About Section (Content to be added by you) -->
+  <!-- About Section -->
   <section id="about" class="container section">
     <h2>About Me</h2>
     <p><!-- Your story goes here --></p>
