--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <canvas id="bgCanvas"></canvas>
 
     <div class="hero-content">
-      <img src="assets/profile-placeholder.jpg" alt="Profile Image" class="profile-img" />
+      <img src="assets/profile_pic.jpg" alt="Profile Image" class="profile-img" />
       <h1>Rohitashwa Chakraborty</h1>
       <p class="tagline">Curious. Adventurous. Geek at Heart.</p>
       <div class="hero-buttons">
@@ -57,13 +57,13 @@
     <h2>Projects</h2>
     <div class="grid projects-grid">
       <div class="card" data-project="project1">
-        <img src="assets/project1-placeholder.jpg" alt="Project 1">
+        <img src="assets/quamtum_computing.jpg" alt="Project 1">
         <h3>Project Title 1</h3>
         <p>Short description of the project.</p>
         <button class="btn details-btn" data-project="project1">More Details</button>
       </div>
       <div class="card" data-project="project2">
-        <img src="assets/project2-placeholder.jpg" alt="Project 2">
+        <img src="assets/genai.jpg" alt="Project 2">
         <h3>Project Title 2</h3>
         <p>Short description of the project.</p>
         <button class="btn details-btn" data-project="project2">More Details</button>
