--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <canvas id="bgCanvas"></canvas>
 
     <div class="hero-content">
-      <img src="assets/profile_pic.jpg" alt="Profile Image" class="profile-img" />
+      <img src="assets/profile_pic.heic" alt="Profile" class="profile-img" />
       <h1>Rohitashwa Chakraborty</h1>
-      <p class="tagline">Curious. Adventurous. Geek at Heart.</p>
+      <p class="tagline">चरैवेति चरैवेति (Keep Walking; Keep Walking)</p>
       <div class="hero-buttons">
         <button id="viewResumeBtn" class="btn">View Resume</button>
       </div>
