--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <canvas id="bgCanvas"></canvas>
 
     <div class="hero-content">
-      <img src="assets/profile_pic.heic" alt="Profile" class="profile-img" />
+      <img src="assets/profile_pic.jpg" alt="Profile" class="profile-img" />
       <h1>Rohitashwa Chakraborty</h1>
       <p class="tagline">चरैवेति चरैवेति (Keep Walking; Keep Walking)</p>
       <div class="hero-buttons">
