--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <canvas id="bgCanvas"></canvas>
 
     <div class="hero-content">
-      <img src="assets/profile_pic.jpg" alt="Profile" class="profile-img" />
+      <img src="assets/profile-pic.png" alt="Profile" class="profile-img" />
       <h1>Rohitashwa Chakraborty</h1>
       <p class="tagline">चरैवेति चरैवेति (Keep Walking; Keep Walking)</p>
       <div class="hero-buttons">
         <button id="viewResumeBtn" class="btn">View Resume</button>
       </div>
       <div class="social-links">
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-        <a href="mailto:youremail@example.com">Email</a>
+        <a href="https://github.com/rohitashwachaks" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/rohitashwachaks/" target="_blank">LinkedIn</a>
+        <a href="mailto:rohitashwachaks@gmail.com">Email</a>
       </div>
     </div>
   </section>
